// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Dag Dag Advanced 1`] = `
<div
  contentEditable={true}
  onKeyUp={[Function]}
  style={
    Object {
      "caretColor": "transparent",
      "outline": "none",
      "position": "relative",
    }
  }
  suppressContentEditableWarning={true}
>
  <svg
    className="dag-wrapper makeStyles-root-8"
    height={800}
    onDoubleClick={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    width={800}
  >
    <g
      className="dag__graph"
    >
      <g
        className="dag__edge makeStyles-dagEdge-11 makeStyles-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-0"
        />
      </g>
      <g
        className="dag__edge makeStyles-dagEdge-11 makeStyles-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-1"
        />
      </g>
      <g
        className="dag__edge makeStyles-dagEdge-11 makeStyles-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-2"
        />
      </g>
      <g
        className="dag__edge makeStyles-dagEdge-11 makeStyles-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-3"
        />
      </g>
      <g
        className="dag__edge makeStyles-dagEdge-11 makeStyles-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-4"
        />
      </g>
      <g
        className="dag__edge makeStyles-dagEdge-11 makeStyles-dagEditable-12"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-5"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-9 makeStyles-dagEditable-12"
        id="dag__node--app"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-9 makeStyles-dagEditable-12"
        id="dag__node--lodash"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-9 makeStyles-dagEditable-12"
        id="dag__node--react"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-9 makeStyles-dagEditable-12"
        id="dag__node--react-dom"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-9 makeStyles-dagEditable-12"
        id="dag__node--apollo"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-10"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-9 makeStyles-dagEditable-12"
        id="dag__node--enzyme"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-10"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots Example/Dag Dag Basic 1`] = `
<div
  contentEditable={true}
  onKeyUp={[Function]}
  style={
    Object {
      "caretColor": "transparent",
      "outline": "none",
      "position": "relative",
    }
  }
  suppressContentEditableWarning={true}
>
  <svg
    className="dag-wrapper makeStyles-root-1"
    height={800}
    onDoubleClick={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    width={800}
  >
    <g
      className="dag__graph"
    >
      <g
        className="dag__edge makeStyles-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-0"
        />
      </g>
      <g
        className="dag__edge makeStyles-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-1"
        />
      </g>
      <g
        className="dag__edge makeStyles-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-2"
        />
      </g>
      <g
        className="dag__edge makeStyles-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-3"
        />
      </g>
      <g
        className="dag__edge makeStyles-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-4"
        />
      </g>
      <g
        className="dag__edge makeStyles-dagEdge-4"
        onClick={[Function]}
      >
        <line />
        <polygon
          className="dag__edge-arrow"
          id="dag__line-5"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-2"
        id="dag__node--app"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-2"
        id="dag__node--lodash"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-2"
        id="dag__node--react"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-2"
        id="dag__node--react-dom"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-2"
        id="dag__node--apollo"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-3"
        />
      </g>
      <g
        className="dag__node makeStyles-dagNode-2"
        id="dag__node--enzyme"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <circle />
        <text
          className="makeStyles-dagNodeText-3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots Example/Dag Dag Dark Themed 1`] = `
<div
  className="MuiPaper-root makeStyles-PaperDag-23 MuiPaper-elevation2 MuiPaper-rounded"
  style={
    Object {
      "height": "800px",
      "width": "800px",
    }
  }
>
  <div
    contentEditable={true}
    onKeyUp={[Function]}
    style={
      Object {
        "caretColor": "transparent",
        "outline": "none",
        "position": "relative",
      }
    }
    suppressContentEditableWarning={true}
  >
    <svg
      className="dag-wrapper makeStyles-root-24"
      height={800}
      onDoubleClick={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      width={800}
    >
      <g
        className="dag__graph"
      >
        <g
          className="dag__edge makeStyles-dagEdge-27"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-0"
          />
        </g>
        <g
          className="dag__edge makeStyles-dagEdge-27"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-1"
          />
        </g>
        <g
          className="dag__edge makeStyles-dagEdge-27"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-2"
          />
        </g>
        <g
          className="dag__edge makeStyles-dagEdge-27"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-3"
          />
        </g>
        <g
          className="dag__edge makeStyles-dagEdge-27"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-4"
          />
        </g>
        <g
          className="dag__edge makeStyles-dagEdge-27"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-5"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-25"
          id="dag__node--app"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-26"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-25"
          id="dag__node--lodash"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-26"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-25"
          id="dag__node--react"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-26"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-25"
          id="dag__node--react-dom"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-26"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-25"
          id="dag__node--apollo"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-26"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-25"
          id="dag__node--enzyme"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-26"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Example/Dag Dag Light Themed 1`] = `
<div
  className="MuiPaper-root makeStyles-PaperDag-15 MuiPaper-elevation2 MuiPaper-rounded"
  style={
    Object {
      "height": "800px",
      "width": "800px",
    }
  }
>
  <div
    contentEditable={true}
    onKeyUp={[Function]}
    style={
      Object {
        "caretColor": "transparent",
        "outline": "none",
        "position": "relative",
      }
    }
    suppressContentEditableWarning={true}
  >
    <svg
      className="dag-wrapper makeStyles-root-16"
      height={800}
      onDoubleClick={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      width={800}
    >
      <g
        className="dag__graph"
      >
        <g
          className="dag__edge makeStyles-dagEdge-19"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-0"
          />
        </g>
        <g
          className="dag__edge makeStyles-dagEdge-19"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-1"
          />
        </g>
        <g
          className="dag__edge makeStyles-dagEdge-19"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-2"
          />
        </g>
        <g
          className="dag__edge makeStyles-dagEdge-19"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-3"
          />
        </g>
        <g
          className="dag__edge makeStyles-dagEdge-19"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-4"
          />
        </g>
        <g
          className="dag__edge makeStyles-dagEdge-19"
          onClick={[Function]}
        >
          <line />
          <polygon
            className="dag__edge-arrow"
            id="dag__line-5"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-17"
          id="dag__node--app"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-18"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-17"
          id="dag__node--lodash"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-18"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-17"
          id="dag__node--react"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-18"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-17"
          id="dag__node--react-dom"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-18"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-17"
          id="dag__node--apollo"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-18"
          />
        </g>
        <g
          className="dag__node makeStyles-dagNode-17"
          id="dag__node--enzyme"
          onClick={[Function]}
          onDoubleClick={[Function]}
        >
          <circle />
          <text
            className="makeStyles-dagNodeText-18"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;
